[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-pricer"
version = "0.1.0"
description = "GH-quadrature options pricer"
requires-python = ">=3.11"
dependencies = ["numpy"]

[tool.hatch.build.targets.wheel]
packages = ["src/gh_pricer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
